@@ -93,7 +93,7 @@ $TCA['tx_standorte_domain_model_fakultaet'] = array(
 $TCA['tx_standorte_domain_model_bibliothek'] = array(
 	'ctrl' => $TCA['tx_standorte_domain_model_bibliothek']['ctrl'],
 	'interface' => array(
-		'showRecordFieldList' => 'sys_language_uid,l10n_parent,l10n_diffsource,hidden,sigel,titel,extlink,lat,lon,bestand,katalog,institutskatalog,strasse,adresszusatz,plz,ort,ansprechpartner,oeffnungszeiten,zusatzinformationen,bild,fakultaet'
+		'showRecordFieldList' => 'sys_language_uid,l10n_parent,l10n_diffsource,hidden,sigel,titel,sorttitel,extlink,lat,lon,bestand,katalog,institutskatalog,strasse,adresszusatz,plz,ort,ansprechpartner,oeffnungszeiten,zusatzinformationen,bild,fakultaet'
 	),
 	'feInterface' => $TCA['tx_standorte_domain_model_bibliothek']['feInterface'],
 	'columns' => array(
@@ -155,11 +155,20 @@ $TCA['tx_standorte_domain_model_bibliothek'] = array(
 				'eval' => 'required,trim',
 			)
 		),
+		'sorttitel' => array(
+			'exclude' => 0,
+			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_bibliothek.sorttitel',
+			'config' => array(
+				'type' => 'input',
+				'size' => '30',
+				'eval' => 'required,trim',
+			)
+		),
 		'lat' => array(
 			'exclude' => 0,
 			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_bibliothek.lat',
 			'config' => array(
-				'type' => 'input',
+				'type' => 'none',
 				'size' => '30',
 				'eval' => 'double2,nospace',
 			)
@@ -168,9 +177,9 @@ $TCA['tx_standorte_domain_model_bibliothek'] = array(
 			'exclude' => 0,
 			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_bibliothek.lon',
 			'config' => array(
-				'type' => 'input',
+				'type' => 'none',
 				'size' => '30',
-				'eval' => 'double2',
+				'eval' => 'double2,nospace',
 			)
 		),
 		'bestand' => array(
@@ -367,7 +376,7 @@ $TCA['tx_standorte_domain_model_bibliothek'] = array(
 		),
 	),
 	'types' => array(
-		'0' => array('showitem' => 'sys_language_uid;;;;1-1-1, l10n_parent, l10n_diffsource, hidden;;1, sigel, titel, extlink, lat, lon, bestand, katalog, institutskatalog, strasse, adresszusatz, plz, ort, ansprechpartner, oeffnungszeiten, zusatzinformationen;;;richtext[]:rte_transform[mode=ts_css|imgpath=uploads/tx_standorte/rte/], bild, fakultaet')
+		'0' => array('showitem' => 'sys_language_uid;;;;1-1-1, l10n_parent, l10n_diffsource, hidden;;1, sigel, titel, sorttitel, extlink, lat, lon, bestand, katalog, institutskatalog, strasse, adresszusatz, plz, ort, ansprechpartner, oeffnungszeiten, zusatzinformationen;;;richtext[]:rte_transform[mode=ts_css|imgpath=uploads/tx_standorte/rte/], bild, fakultaet'),
 	),
 	'palettes' => array(
 		'1' => array('showitem' => '')
