@@ -1,1 +1,5 @@
 tx_standorte.persistence.storagePid = 1184
+
+plugin.tx_standorte._CSS_DEFAULT_STYLE (
+	
+)
