@@ -1,7 +1,6 @@
 =STANDORTE=
 
 ==TODO==
-* Kontakt & Ansprechpartner?
 * Semesterferien? Oeffnungszeiten
-
-
+* ist geoeffnet?
+* Manual
