@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="<f:uri.resource path='css/standorte.css' />" />
 <div class="tx-standorte-pi1">
 <f:renderFlashMessages class="tx-efempty-flash-message" />
 <f:render section="bibos" />
