@@ -1,0 +1,17 @@
+<f:if condition="{institutskatalog}">
+	<f:then>
+		<br />
+		<f:link.external uri="{institutskatalog}">
+			<f:translate key="institutskatalog" />
+		</f:link.external>
+	</f:then>
+</f:if>
+<f:if condition="{katalog}">
+	<f:then>
+		<br /><f:translate key="bestandenthalten" />
+		<f:link.external uri="{katalog}">
+					GUK
+		</f:link.external>
+		<f:translate key="enhalten" />
+	</f:then>
+</f:if>
