@@ -1,0 +1,7 @@
+<f:if condition="{bild}">
+	<f:then>
+		<div class="bibliotheksbild" style="float:right">
+			<f:image src="uploads/tx_standorte/{bild}" alt="Bild der {titel}" maxWidth="220" />
+		</div>
+	</f:then>
+</f:if>
