@@ -4,68 +4,53 @@
 	<f:for each="{bibos}" as="bibo">
 
 		<div class="list">
-			<f:if condition="{bibo.bild}">
-				<f:then>
-					<div class="bibliotheksbild" style="float:right">
-						<f:image src="uploads/tx_standorte/{bibo.bild}" alt="Bild der {bibo.titel}" maxWidth="220" />
-					</div>
-				</f:then>
-			</f:if>
-			<h2>{bibo.titel} <f:if condition="{bibo.geoeffnet}"><f:then> - geoeffnet</f:then></f:if></h2>
-			<dl>
-				<dt>Bibliothekssigel</dt>
-				<dd>7/{bibo.sigel}</dd>
-			</dl>
-			<dl>
-				<dt>Fakult&auml;t</dt>
-				<dd>{fakultaet.titel}</dd>
-			</dl>
-			<dl>
-				<dt>Anschrift</dt>
-				<dd>{bibo.strasse}<br />{bibo.plz} {bibo.ort}</dd>
-			</dl>
-			<dl>
-				<dt>Kontakt</dt>
-				<dd>{bibo.telefon}</dd>
-			</dl>
 
-			<!--Oeffnungszeiten-->
+			<!-- Bild -->
+			<f:render partial="bild" arguments="{bild: bibo.bild,titel: bibo.titel}"/>
+			<!-- /Bild -->
+
+			<h2>{bibo.titel}</h2>
 			<dl>
+				<dt><f:translate key="bibliothekssigel" /></dt>
+				<dd>7/{bibo.sigel}</dd>
+
+				<dt><f:translate key="fakultaet" /></dt>
+				<dd>{fakultaet.titel}</dd>
+
+				<dt><f:translate key="anschrift" /></dt>
+				<dd>{bibo.strasse}<br />
+				<f:if condition="{bibo.adresszusatz}">
+					<f:then>
+						{bibo.adresszusatz}
+						<br />
+					</f:then>
+				</f:if>
+					{bibo.plz} {bibo.ort}</dd>
+
+				<dt><f:translate key="kontakt" /></dt>
+				<dd><f:format.html>{bibo.ansprechpartner}</f:format.html></dd>
+
+				<f:if condition="{bibo.zusatzinformationen}">
+					<f:then>
+						<dt><f:translate key="zusatzinformationen" /></dt>
+						<dd><f:format.html>{bibo.zusatzinformationen}</f:format.html></dd>
+					</f:then>
+				</f:if>
+
+				<!--Oeffnungszeiten-->
 				<dt><f:translate key="oeffnung" /></dt>
 				<dd>
-				<f:render partial="oeffnungszeiten" arguments="{bob: bibo.oeffnungszeiten}"/>
+				<f:for each="{bibo.oeffnungszeiten}" as="bobo">
+					<f:render partial="oeffnungszeiten" arguments="{von: bobo.von, bis:bobo.bis, wochentag:bobo.wochentag, inhalt:bobo.inhalt}"/>
+				</f:for>
 				</dd>
-			</dl>
+				<!--/Oeffnungszeiten-->
 
-			<!--/Oeffnungszeiten-->
-
-			<dl>
-				<dt>Bibliotheksbeauftragte</dt>
-				<dd><f:format.html>{bibo.ansprechpartner}</f:format.html></dd>
-			</dl>
-			<dl>
-				<dt>Best&auml;nde</dt>
+				<dt><f:translate key="bestand" /></dt>
 				<dd>{bibo.bestand}
-				<f:if condition="{bibo.institutskatalog}">
-					<f:then>
-						<br />
-						<f:link.external uri="{bibo.institutskatalog}">
-							<f:translate key="instituskatalog" />
-						</f:link.external>
-					</f:then>
-				</f:if>
-				<f:if condition="{bibo.katalog}">
-					<f:then>
-						<br />
-						<f:link.external uri="{bibo.katalog}">
-					Katalog
-						</f:link.external>
-					</f:then>
-				</f:if>
+				<f:render partial="bestand" arguments="{institutskatalog:bibo.institutskatalog, katalog:bibo.katalog}"/>
 				</dd>
 			</dl>
 		</div>
-
 	</f:for>
-
 </f:section>
